--- a/index.htm
+++ b/index.htm
@@ -5,6 +5,7 @@
 <body>
   <div id="app">test</div>  
   <div id="app">test2</div>  
+    <div id="app">test3</div>  
   <script src="bundle.js"></script>
   
 </body>
