--- a/index.htm
+++ b/index.htm
@@ -6,6 +6,7 @@
   <div id="app">test</div>  
   <div id="app">test2</div>  
     <div id="app">test3</div>  
+        <div id="app">test4</div>  
   <script src="bundle.js"></script>
   
 </body>
